[gd_scene load_steps=6 format=3 uid="uid://bragq3hxlwc6"]

[ext_resource type="Script" uid="uid://bmoepygghkg77" path="res://test/objects/obj3.gd" id="1_dvlwy"]
[ext_resource type="Script" uid="uid://nmgti4nnwjet" path="res://addons/thoth/thoth_serializable.gd" id="1_pa4tl"]
[ext_resource type="Texture2D" uid="uid://cfcdyou1ipb5u" path="res://test/textures/ibis3.png" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 32.0

[sub_resource type="CircleShape2D" id="2"]

[node name="obj3" type="Node2D"]
script = ExtResource("1_dvlwy")

[node name="Serializable" type="Node" parent="."]
script = ExtResource("1_pa4tl")
children = false
variables = Array[String](["color", "linksToObject"])

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="Area2DLink" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLink"]
shape = SubResource("2")

[node name="Line2D" type="Line2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="lines" type="Node2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
